--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@ IN THIS CHALLENGE, YOU WILL LEARN ABOUT:
 -->
 
 
-    <title>Firstname Lastname's Instruction Tips</title>
+    <title> Amelia Moss Instruction Tips</title>
   <script src="https://thimble.mozilla.org/resources/remix/index.js" type="text/javascript"></script>
 </head>
   <body>
 
     <!--
-TASK 1
+Task 1
 =======================================================
 Replace the header contents: 
 - replace logo with an image of your own (100px x 100px and containing transparency). 
