--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ of the editor to get a description of what each tag is for.
 
 IN THIS CHALLENGE, YOU WILL LEARN ABOUT:
 
-- HTML: Nested lists
+- HTML: Images
 - HTML: Unordered list
 - HTML: Captions
 - CSS: Borders
@@ -56,8 +56,8 @@ Replace the header contents:
 -->
 
     <header>          
-      <img src="https://farm9.staticflickr.com/8697/16174797344_3c22e14ba4_o.png" width="100" align="right" height="100" alt="KH_monogram">            
-      <h1>Firstname Lastname's Name of Site</h1>
+      <img src="https://i.imgur.com/mjRYHLz.png" width="100" align="right" height="100" alt="KH_monogram">            
+      <h1>Amelia Moss's How to be a Broadcaster</h1>
       <h3>An Instruction Challenge for JOUR108</h3>
 
     </header>
@@ -74,14 +74,14 @@ Add your introduction to your step-by-step-guide, including a title, time requir
         <div class="introduction">
 
           <div class="information">
-            <h1>How to make an awesome ...</h1>
+            <h1>How to be a Reporter</h1>
 
             <hr>
-            <p><b>Assembly time:</b> 30 minutes<br>
+            <p><b>Assembly time:</b> 4 years<br>
               <b>Awesome rating:</b> 10% awesome</p>
             <hr>
 
-            <p>Are you wondering how to make a cool rocket that can easily surpass a baking soda-vinegar rocket? It's really fun to make. Why don't you try to make it yourself? Follow the steps and you'll make a great rocket!</p>
+            <p>Are you wondering how to be a reporter? Follow the steps and you'll get a head start!</p>
 
           </div>
 
@@ -95,12 +95,12 @@ Add your Things You'll Need.
 -->         
             <ul class="list-of-items">
               <li><h2>Things You'll Need</h2></li>
-              <li>Bottle</li>
-              <li>Cardboard</li>
-              <li>Hand pump (bicycle)</li>
-              <li>Cork (vintage wines)</li>
-              <li>Duct Tape</li>
-              <li>Water</li>
+              <li>Diploma</li>
+              <li>Degree</li>
+              <li>Internship</li>
+              <li>Experience</li>
+              <li>Linkedin</li>
+              <li>Connections</li>
             </ul>
           </aside>
         </div>
@@ -113,11 +113,11 @@ Add your steps. When you need a new step, copy and paste all of the code of an e
 -->         
         <ol class="step-by-step">
 
-          <!-- A new step -->
+          <!-- Attend School for Journalism -->
           <li>
             <div class="content">
-              <h3>Invert the bottle and cut three flippers of cardboard.</h3>
-              <p>This is necessary to hold the rocket at launch time. Make your best design.</p> 
+              <h3>Apply to schools for a journalism degree</h3>
+              <p>L</p> 
             </div>
           </li>
 
