--- a/index.html
+++ b/index.html
@@ -117,15 +117,15 @@ Add your steps. When you need a new step, copy and paste all of the code of an e
           <li>
             <div class="content">
               <h3>Apply to schools for a journalism degree</h3>
-              <p>L</p> 
+              <p>Graduate high school with good grades and search for colleges with a Journalism Degree. </p> 
             </div>
           </li>
 
-          <!-- A new step -->
+          <!-- Become an Intern -->
           <li>
             <div class="content">
-              <h3>Tape them all to the bottle at an angle of about 120 degrees between them.</h3>
-              <p>Remember, the bottle must be upside down and the flippers must not be taped at the bottle's base.</p>
+              <h3>Apply to internships on Linkedin or the ones posted at your schools journalism site.</h3>
+              <p>Remember, make a good resume and cover letter to achieve an internship.</p>
 
               <!--
 This block contains a photo and has a caption.
@@ -137,11 +137,11 @@ with a paragraph to create a photo with a caption.
             </div>
           </li>
 
-          <!-- A new step -->
+          <!-- Gain expereince -->
           <li>
             <div class="content">
-              <h3>Make a hole through the cork so that the bicycle pump can easily fit into it.</h3>
-              <p>Fix the pump tube to it with plasticine.</p>
+              <h3>Get some experience as being an intern and make connections to get a paying job after.</h3>
+              <p>Follow your fellow reporters on linkedin!</p>
 
 
               <iframe width="560" height="315" src="https://www.youtube.com/embed/tntOCGkgt98" frameborder="0" allowfullscreen></iframe>
@@ -149,19 +149,19 @@ with a paragraph to create a photo with a caption.
 
           </li>
 
-          <!-- A new step -->
+          <!-- Pursue a Job -->
           <li>
             <div class="content">
-              <h3>Invert the bottle and cut three flippers of cardboard.</h3>
-              <p>This is necessary to hold the rocket at launch time. Make your best design.</p> 
+              <h3>Apply to reporting job on indeed or get another internship for experience.</h3>
+              <p>It is okay if it does not pay a lot, your first job as a reporter is good to build your resume.</p> 
             </div>
           </li>
 
-          <!-- A new step -->
+          <!-- Advance Your Career -->
           <li>
             <div class="content">
-              <h3>Invert the bottle and cut three flippers of cardboard.</h3>
-              <p>This is necessary to hold the rocket at launch time. Make your best design.</p> 
+              <h3>After getting your first reporting job see where it takes you, build your clients and resume.</h3>
+              <p>Get advice from colleague and bosses for your next big job as a reporter!</p> 
             </div>
           </li>
 
@@ -211,7 +211,7 @@ Customise the visual style and appearance of your guide.
         margin:0 0 130px;
         width:100%;
         font-weight:normal;
-        font-family:Arial, sans-serif;         /* CHANGE THE FONT HERE */
+        font-family:Arial, Roboto Serif;         /* CHANGE THE FONT HERE */
         color:#555;         /* CHANGE THE FONT COLOR HERE */
       }  
 
