--- a/index.html
+++ b/index.html
@@ -162,7 +162,9 @@ with a paragraph to create a photo with a caption.
             <div class="content">
               <h3>After getting your first reporting job see where it takes you, build your clients and resume.</h3>
               <p>Get advice from colleague and bosses for your next big job as a reporter!</p> 
-            </div>
+               <a href="https://www.flickr.com/photos/happyraindrops/" title="2006-04-22 Yaeum Middle School Rocket Day 19 by Stephen Hucker, on Flickr"><img alt="2006-04-22 Yaeum Middle School Rocket Day 19" height="%" width="%" src=https://live.staticflickr.com/2216/2218154278_61c153866c_k.jpg" ></a>
+              <p class="caption">Maecenas sed diam eget risus varius blandit sit amet non magna.</p 
+           </div>
           </li>
 
 
@@ -220,7 +222,7 @@ Customise the visual style and appearance of your guide.
       header, footer {
         padding:5%;
         border:0 10%;
-        background-color:#A1D0EB;          /* CHANGE THE HEADER AND FOOTER COLOR HERE */
+        background-color:#da7375;          /* CHANGE THE HEADER AND FOOTER COLOR HERE */
         width:100%;
         margin:0px;        
       }
