--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ with a paragraph to create a photo with a caption.
               <h3>After getting your first reporting job see where it takes you, build your clients and resume.</h3>
               <p>Get advice from colleague and bosses for your next big job as a reporter!</p> 
                <a href="https://www.flickr.com/photos/happyraindrops/" title="2006-04-22 Yaeum Middle School Rocket Day 19 by Stephen Hucker, on Flickr"><img alt="2006-04-22 Yaeum Middle School Rocket Day 19" height="%" width="%" src=https://live.staticflickr.com/2216/2218154278_61c153866c_k.jpg" ></a>
-              <p class="caption">Maecenas sed diam eget risus varius blandit sit amet non magna.</p 
+              <p class="caption"></p 
            </div>
           </li>
 
