--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@ Customise the visual style and appearance of your guide.
         margin:0;
         width:100%;
         font-weight:bold;
-        font-family:Arial, sans-serif;          /* CHANGE THE HEADER FONT HERE */
+        font-family:Roboto Serif, Spectral;          /* CHANGE THE HEADER FONT HERE */
       }
 
       h2, h3, h4 {
@@ -278,7 +278,7 @@ Customise the visual style and appearance of your guide.
 
       /* Styles for unordered lists <ul> */
       ul {
-        font-family:"Courier New", Courier, monospace;
+        font-family:"Roboto Serif", Courier, monospace;
         box-shadow:0px 2px 10px #ddd;
         background-color: 73DAD8;          /* CHANGE THE THINGS BACKGROUND COLOR HERE */
         border: 1px solid #555;           /* CHANGE THE THINGS BORDER HERE */
