--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ with a paragraph to create a photo with a caption.
               <p>Follow your fellow reporters on linkedin!</p>
 
 
-              <iframe width="560" height="315" src="https://youtu.be/fQh8E761-4U?si=RbxJjssgx62qV0Lw" frameborder="0" allowfullscreen></iframe>
+              <iframe width="560" height="315" src=""https://www.youtube.com/embed/j2YA_TScR-E?si=1FEy5VKRFrK61LSc" frameborder="0" allowfullscreen></iframe>
             </div>
 
           </li>
