--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ Replace the header contents:
 
     <header>          
       <img src="https://i.imgur.com/mjRYHLz.png" width="100" align="right" height="100" alt="KH_monogram">            
-      <h1>Amelia Moss's How to be a Broadcaster</h1>
+      <h1>Amelia Moss's How to be a Reporter</h1>
       <h3>An Instruction Challenge for JOUR108</h3>
 
     </header>
@@ -213,7 +213,7 @@ Customise the visual style and appearance of your guide.
         margin:0 0 130px;
         width:100%;
         font-weight:normal;
-        font-family:Arial, Roboto Serif;         /* CHANGE THE FONT HERE */
+        font-family:Comic Sans MS, Roboto Mono;         /* CHANGE THE FONT HERE */
         color:#555;         /* CHANGE THE FONT COLOR HERE */
       }  
 
@@ -278,7 +278,7 @@ Customise the visual style and appearance of your guide.
 
       /* Styles for unordered lists <ul> */
       ul {
-        font-family:"Roboto Serif", Courier, monospace;
+        font-family:"Comic Sans MS", Courier, monospace;
         box-shadow:0px 2px 10px #ddd;
         background-color: 73DAD8;          /* CHANGE THE THINGS BACKGROUND COLOR HERE */
         border: 1px solid #555;           /* CHANGE THE THINGS BORDER HERE */
