--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@ Customise the visual style and appearance of your guide.
       /* BASIC STYLES FOR THE PAGE */
       
       a {
-        color:#73DAD8;         /* CHANGE THE LINK COLOR HERE */
+        color:#da7375;         /* CHANGE THE LINK COLOR HERE */
         font-weight:bold;
       }
 
