--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@ Add your introduction to your step-by-step-guide, including a title, time requir
             <h1>How to be a Reporter</h1>
 
             <hr>
-            <p><b>Assembly time:</b> 4 years<br>
-              <b>Awesome rating:</b> 10% awesome</p>
+            <p><b>Assembly time:</b> 5 years<br>
+              <b>Awesome rating:</b> 100% awesome</p>
             <hr>
 
             <p>Are you wondering how to be a reporter? Follow the steps and you'll get a head start!</p>
@@ -334,7 +334,7 @@ Customise the visual style and appearance of your guide.
         position:relative;
         margin-bottom:40px;
         overflow:hidden;
-        background:#fff;
+        background:#da7375;
       }
 
       hr {
