--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@ Customise the visual style and appearance of your guide.
         position:relative;
         margin-bottom:40px;
         overflow:hidden;
-        background:#da7375;
+        background:#73DAD8;
       }
 
       hr {
