--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@ Customise the visual style and appearance of your guide.
         width:100%;
         font-weight:normal;
         font-family:Comic Sans MS, Roboto Mono;         /* CHANGE THE FONT HERE */
-        color:#93e2e0;         /* CHANGE THE FONT COLOR HERE */
+        color:#5a3031;         /* CHANGE THE FONT COLOR HERE */
       }  
 
       /* PAGE LAYOUT */
